# selda

./: flake.nix
selda/: selda.cabal
selda-postgresql/: selda-postgresql.cabal
selda-postgresql/src/Database/Selda/: PostgreSQL.hs
selda-postgresql/src/Database/Selda/PostgreSQL/: Encoding.hs
selda-sqlite/: selda-sqlite.cabal
selda-sqlite/src/Database/Selda/: SQLite.hs
selda-tests/test/: Tables.hs
selda-tests/test/Tests/: JSON.hs  Mutable.hs  Query.hs
selda/src/Database/: Selda.hs
selda/src/Database/Selda/: FieldSelectors.hs  Frontend.hs  Generic.hs  MakeSelectors.hs  Migrations.hs  Prepared.hs  Query.hs  SqlRow.hs  SqlType.hs  Table.hs
selda/src/Database/Selda/SQL/Print/: Config.hs
