name:                selda-postgresql
version:             0.1.8.2
synopsis:            PostgreSQL backend for the Selda database EDSL.
description:         PostgreSQL backend for the Selda database EDSL.
                     Requires the PostgreSQL @libpq@ development libraries to be
                     installed.
homepage:            https://github.com/valderman/selda
license:             MIT
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag haste
  default: False
  description: Package is being installed for Haste.

library
  exposed-modules:
    Database.Selda.PostgreSQL
  other-modules:
    Database.Selda.PostgreSQL.Encoding
  other-extensions:
    GADTs
    RecordWildCards
    OverloadedStrings
    CPP
  build-depends:
      base
    , bytestring
    , exceptions
    , selda
    , selda-json
    , text
  if !flag(haste)
    build-depends:
        postgresql-binary
      , postgresql-libpq
      , time
      , uuid-types
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
