name:                selda-sqlite
version:             0.1.7.2
synopsis:            SQLite backend for the Selda database EDSL.
description:         Allows the Selda database EDSL to be used with SQLite
                     databases.
homepage:            https://github.com/valderman/selda
license:             MIT
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag haste
  default: False
  description: Package is being installed for Haste.

library
  exposed-modules:
    Database.Selda.SQLite
  other-modules:
    Database.Selda.SQLite.Parser
  other-extensions:
    GADTs
    CPP
  build-depends:
      base
    , selda
    , text
  if !flag(haste)
    build-depends:
        bytestring
      , direct-sqlite
      , directory
      , exceptions
      , time
      , uuid-types
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
